# startheme

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
metadata/: catppuccin.toml  cyber.toml  gruvbox.toml  matrix.toml  midnight.toml  minimal.toml  ocean.toml  sunset.toml  tokyonight.toml
startheme/: __init__.py  backup.py  cli.py  config.py  github.py  installer.py  theme.py  tui.py
startheme/metadata/: cute.toml  dracula.toml  forest.toml  monokai.toml  nord.toml  paper.toml  powerline-pro.toml  professional.toml  solarized.toml  synthwave.toml  terminal-classic.toml
startheme/themes/: catppuccin.toml  cyber.toml  gruvbox.toml  matrix.toml  minimal.toml  monokai.toml  solarized.toml  sunset.toml  synthwave.toml  tokyonight.toml
tests/: conftest.py  test_backup.py  test_cli.py  test_config.py  test_installer.py  test_theme.py  test_theme_catalog.py
themes/: cute.toml  dracula.toml  forest.toml  midnight.toml  nord.toml  ocean.toml  paper.toml  powerline-pro.toml  professional.toml  terminal-classic.toml
